--- a/login.html
+++ b/login.html
@@ -1,50 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-theme="dark">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login | EBILLR</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="assets/css/styles.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - EBillr</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/login.css">
 </head>
 <body>
-  <header id="site-header" class="site-header">
-    <a class="brand" href="index.html">E-Billr</a>
-    <div class="header-actions">
-      <a class="btn ghost" href="index.html">Home</a>
-      <button class="icon-btn theme-toggle" title="Toggle theme" aria-label="Toggle theme"></button>
+  <!-- Top bar -->
+  <header class="top-bar">
+    <div class="logo">EBillr</div>
+    <div class="theme-toggle">
+      <!-- SVG icons will be inserted by JS -->
     </div>
   </header>
 
-  <div class="radial-blur"></div>
-
-  <main class="page-container">
-    <div class="card login-card">
-      <h1 style="margin: 0 0 8px">Welcome to E-Billr</h1>
-      <p class="muted" style="margin:0 0 16px">Sign in to manage your digital bills</p>
-
-      <a id="github-login-btn" class="btn" href="#" style="display:inline-flex;align-items:center;justify-content:center;gap:.5rem">
-        <!-- GitHub icon + text -->
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" style="margin-right:8px">
-          <path d="M12 .5a12 12 0 00-3.8 23.4c.6.1.8-.25.8-.55v-2c-3.3.7-4-1.6-4-1.6-.5-1.3-1.2-1.6-1.2-1.6-1-.7.08-.7.08-.7 1.1.08 1.7 1.2 1.7 1.2 1 .1 1.6-.8 1.6-.8.9-1.6 2.3-1.1 2.8-.9.1-.7.4-1.1.7-1.4-2.6-.3-5.4-1.3-5.4-5.8 0-1.3.5-2.3 1.2-3.2-.1-.3-.5-1.5.1-3.2 0 0 .9-.3 3.2 1.2a11 11 0 015.8 0c2.3-1.5 3.2-1.2 3.2-1.2.6 1.7.2 2.9.1 3.2.8 1 1.2 2 1.2 3.2 0 4.5-2.8 5.5-5.5 5.8.4.3.8 1 .8 2v3c0 .3.2.6.8.5A12 12 0 0012 .5z" fill="currentColor"/>
-        </svg>
-        Continue with GitHub
-      </a>
-
-      <p class="muted small" style="margin-top:12px">We request `repo` scope to create/read <code>digitalbill.json</code>. Your client secret is only used on the server.</p>
-    </div>
+  <!-- Main content -->
+  <main class="login-container">
+    <h1>Login with GitHub</h1>
+    <p>Sign in to continue to your billing dashboard</p>
+    <button id="github-login-btn" class="github-btn">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M8 .198a8 8 0 0 0-2.534 15.6c.4.074.546-.174.546-.386 0-.19-.007-.693-.01-1.36-2.225.483-2.695-1.073-2.695-1.073-.364-.923-.89-1.168-.89-1.168-.727-.498.055-.488.055-.488.804.056 1.226.827 1.226.827.715 1.225 1.874.87 2.33.665.072-.517.28-.87.508-1.07-1.777-.202-3.644-.889-3.644-3.956 0-.874.31-1.59.823-2.15-.083-.203-.357-1.017.078-2.12 0 0 .67-.215 2.195.82a7.639 7.639 0 0 1 4 0c1.524-1.035 2.193-.82 2.193-.82.437 1.103.163 1.917.08 2.12.513.56.822 1.276.822 2.15 0 3.075-1.87 3.75-3.65 3.95.288.25.544.74.544 1.49 0 1.075-.01 1.94-.01 2.2 0 .214.145.463.55.385A8.001 8.001 0 0 0 8 .198z"/>
+      </svg>
+      Continue with GitHub
+    </button>
   </main>
 
-  <footer class="site-footer">
+  <footer class="footer">
     <div class="footer-left">
-      <a href="#">License</a>
-      <a href="#">GitHub</a>
-      <a href="#">Support</a>
+      <a href="#">License</a> | <a href="#">GitHub</a> | <a href="#">Support</a>
     </div>
-    <div class="footer-right">© 2025 Laksh Kukreja. All rights reserved.</div>
+    <div class="footer-right">
+      © 2025 Laksh Kukreja. All rights reserved.
+    </div>
   </footer>
 
-  <script src="assets/js/common.js"></script>
   <script src="assets/js/login.js"></script>
 </body>
 </html>
